Removed not-working toc from nb

--- a/object_with_getstate.ipynb
+++ b/object_with_getstate.ipynb
@@ -40,7 +40,7 @@
     "object is restored.\n",
     "\n",
     "It's not always sufficient (e.g., if the class name has changed, it won't work), but\n",
-    "knowing about and using `__setstate__` already covers a lot of cases. [In the last section](#Last-Remarks:-Advice-on-Backwards-Compatibility-with-Pickling)\n",
+    "knowing about and using `__setstate__` already covers a lot of cases. In the last section\n",
     "of the article I'll add a short overview of additional techniques for backwards\n",
     "compatibility when just `__setstate__` is not enough. Since these things are\n",
     "actually reasonable or even required, they don't fit the \"unpattern\" scheme and\n",
