Removed safe_load, minor improvements in text

--- a/object_with_getstate.ipynb
+++ b/object_with_getstate.ipynb
@@ -12,7 +12,7 @@
    "source": [
     "## Intro: Pickling and Backwards Compatibility\n",
     "\n",
-    "This unpattern is concerned with persistence of python objects via pickle. I\n",
+    "This unpattern is concerned with the persistence of python objects via pickle. I\n",
     "realize that in the wild of python programming, comparatively few people care\n",
     "about backwards compatibility in general, not even talking about backwards\n",
     "compatibility of pickled objects.\n",
@@ -20,8 +20,8 @@
     "Ensuring the latter means that if you (or your user) saved an object of some\n",
     "class, say `A` with pickle, you should be able to load it with a newer version\n",
     "of the codebase. Curiously, this is especially important in the context of \n",
-    "machine learning (precisely where it is routinely neglected) because you might\n",
-    "want to be able to load a previously trained and saved model even after\n",
+    "machine learning (precisely where it is routinely neglected) because one might\n",
+    "want to load a previously saved model even after\n",
     "performing a seemingly innocent update of some ML library dependency.\n",
     "\n",
     "Alas, as most of us learn the hard way sooner or later, there is no such thing\n",
@@ -33,19 +33,18 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "The main mechanism for providing backwards compatibility for pickled\n",
-    "objects is the `__setstate__` magic method. If your class\n",
-    "definition has changed between the time it was pickled and the time it is\n",
-    "loaded, implementing `__setstate__` allows you to modify how the state of the\n",
-    "object is restored.\n",
+    "The main mechanism for providing backwards compatibility for pickled objects is\n",
+    "the `__setstate__` magic method. If your class definition has changed between\n",
+    "the time it was pickled and the time it is loaded, implementing `__setstate__`\n",
+    "allows you to modify how the state of the object is restored.\n",
     "\n",
-    "It's not always sufficient (e.g., if the class name has changed, it won't work), but\n",
-    "knowing about and using `__setstate__` already covers a lot of cases. In the last section\n",
-    "of the article I'll add a short overview of additional techniques for backwards\n",
-    "compatibility when just `__setstate__` is not enough. Since these things are\n",
-    "actually reasonable or even required, they don't fit the \"unpattern\" scheme and\n",
-    "are therefore not the main focus. If you want to learn useful stuff, give them a\n",
-    "glance, but useful stuff is not what we're here for :wink:."
+    "It's not always sufficient (e.g., if the class name has changed, it won't work),\n",
+    "but knowing about and using `__setstate__` already covers a lot of cases. In the\n",
+    "last section of the article I'll add a short overview of additional techniques\n",
+    "for backwards compatibility when just `__setstate__` is not enough. Since these\n",
+    "things are actually reasonable or even required, they don't fit the \"unpattern\"\n",
+    "scheme and are therefore not the main focus. If you want to learn useful stuff,\n",
+    "give them a glance, but useful stuff is not what we're here for ;)."
    ],
    "id": "250e7b55c983069a"
   },
@@ -53,7 +52,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "### Example of problem-free persistence\n",
+    "### Example of Non-problematic Persistence\n",
     "\n",
     "Before outlining the problem, let's have a look at a case without issues:"
    ],
@@ -62,8 +61,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:07:21.726082Z",
-     "start_time": "2024-05-09T21:07:21.719444Z"
+     "end_time": "2024-05-09T21:21:42.964326Z",
+     "start_time": "2024-05-09T21:21:42.946334Z"
     }
    },
    "cell_type": "code",
@@ -104,20 +103,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:07:21.738966Z",
-     "start_time": "2024-05-09T21:07:21.735082Z"
+     "end_time": "2024-05-09T21:21:43.001634Z",
+     "start_time": "2024-05-09T21:21:42.997753Z"
     }
    },
    "cell_type": "code",
    "source": [
     "def print_error(e: Exception):\n",
-    "    print(f\"{e.__class__.__name__}: {e}\")\n",
-    "\n",
-    "def safe_load(serialized: bytes) -> Any | None:\n",
-    "    try:\n",
-    "        return pickle.loads(serialized)\n",
-    "    except Exception as e:\n",
-    "        print_error(e)"
+    "    print(f\"{e.__class__.__name__}: {e}\")\n"
    ],
    "id": "3bbf220674919e6e",
    "outputs": [],
@@ -126,13 +119,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:07:21.744767Z",
-     "start_time": "2024-05-09T21:07:21.740897Z"
+     "end_time": "2024-05-09T21:21:43.032019Z",
+     "start_time": "2024-05-09T21:21:43.028465Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "a: A = safe_load(serialized_a)\n",
+    "a: A = pickle.loads(serialized_a)\n",
     "try:\n",
     "    a.baz\n",
     "except AttributeError as e:\n",
@@ -159,8 +152,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:07:21.761480Z",
-     "start_time": "2024-05-09T21:07:21.757068Z"
+     "end_time": "2024-05-09T21:21:43.046647Z",
+     "start_time": "2024-05-09T21:21:43.041949Z"
     }
    },
    "cell_type": "code",
@@ -183,13 +176,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:07:21.807412Z",
-     "start_time": "2024-05-09T21:07:21.798261Z"
+     "end_time": "2024-05-09T21:21:43.094409Z",
+     "start_time": "2024-05-09T21:21:43.088587Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "a: A = safe_load(serialized_a)\n",
+    "a: A = pickle.loads(serialized_a)\n",
     "a.new_field\n"
    ],
    "id": "72f8d99f52065f6c",
@@ -252,8 +245,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:07:21.827868Z",
-     "start_time": "2024-05-09T21:07:21.823275Z"
+     "end_time": "2024-05-09T21:21:43.105601Z",
+     "start_time": "2024-05-09T21:21:43.101411Z"
     }
    },
    "cell_type": "code",
@@ -298,13 +291,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:07:21.871141Z",
-     "start_time": "2024-05-09T21:07:21.867932Z"
+     "end_time": "2024-05-09T21:21:43.118440Z",
+     "start_time": "2024-05-09T21:21:43.113810Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "a_deserialized: A = safe_load(serialized_a)\n",
+    "a_deserialized: A = pickle.loads(serialized_a)\n",
     "\n",
     "try:\n",
     "    a_deserialized.get_foo()\n",
@@ -332,8 +325,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:07:21.914381Z",
-     "start_time": "2024-05-09T21:07:21.911029Z"
+     "end_time": "2024-05-09T21:21:43.160760Z",
+     "start_time": "2024-05-09T21:21:43.157511Z"
     }
    },
    "cell_type": "code",
@@ -388,8 +381,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:07:22.015705Z",
-     "start_time": "2024-05-09T21:07:22.011562Z"
+     "end_time": "2024-05-09T21:21:43.185139Z",
+     "start_time": "2024-05-09T21:21:43.179843Z"
     }
    },
    "cell_type": "code",
@@ -436,8 +429,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:07:22.047523Z",
-     "start_time": "2024-05-09T21:07:22.044454Z"
+     "end_time": "2024-05-09T21:21:43.227478Z",
+     "start_time": "2024-05-09T21:21:43.224075Z"
     }
    },
    "cell_type": "code",
@@ -478,8 +471,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:07:22.105829Z",
-     "start_time": "2024-05-09T21:07:22.102527Z"
+     "end_time": "2024-05-09T21:21:43.253822Z",
+     "start_time": "2024-05-09T21:21:43.249624Z"
     }
    },
    "cell_type": "code",
@@ -550,8 +543,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:07:22.126615Z",
-     "start_time": "2024-05-09T21:07:22.120262Z"
+     "end_time": "2024-05-09T21:21:43.309906Z",
+     "start_time": "2024-05-09T21:21:43.304152Z"
     }
    },
    "cell_type": "code",
@@ -593,13 +586,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:07:22.172198Z",
-     "start_time": "2024-05-09T21:07:22.167226Z"
+     "end_time": "2024-05-09T21:21:43.333086Z",
+     "start_time": "2024-05-09T21:21:43.328913Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "a_deserialized: A = safe_load(serialized_a)\n",
+    "a_deserialized: A = pickle.loads(serialized_a)\n",
     "a_deserialized.get_foo()"
    ],
    "id": "617bce15f63ebba5",
@@ -675,8 +668,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:07:22.187572Z",
-     "start_time": "2024-05-09T21:07:22.184228Z"
+     "end_time": "2024-05-09T21:21:43.380361Z",
+     "start_time": "2024-05-09T21:21:43.376612Z"
     }
    },
    "cell_type": "code",
@@ -701,8 +694,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:07:22.232846Z",
-     "start_time": "2024-05-09T21:07:22.228556Z"
+     "end_time": "2024-05-09T21:21:43.403074Z",
+     "start_time": "2024-05-09T21:21:43.398927Z"
     }
    },
    "cell_type": "code",
@@ -727,8 +720,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:07:22.251139Z",
-     "start_time": "2024-05-09T21:07:22.247893Z"
+     "end_time": "2024-05-09T21:21:43.454717Z",
+     "start_time": "2024-05-09T21:21:43.451148Z"
     }
    },
    "cell_type": "code",
@@ -743,8 +736,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:07:22.264435Z",
-     "start_time": "2024-05-09T21:07:22.260885Z"
+     "end_time": "2024-05-09T21:21:43.478770Z",
+     "start_time": "2024-05-09T21:21:43.473733Z"
     }
    },
    "cell_type": "code",
@@ -776,8 +769,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:07:22.310889Z",
-     "start_time": "2024-05-09T21:07:22.307703Z"
+     "end_time": "2024-05-09T21:21:43.520032Z",
+     "start_time": "2024-05-09T21:21:43.516446Z"
     }
    },
    "cell_type": "code",
@@ -798,8 +791,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:07:22.334600Z",
-     "start_time": "2024-05-09T21:07:22.330697Z"
+     "end_time": "2024-05-09T21:21:43.547813Z",
+     "start_time": "2024-05-09T21:21:43.544357Z"
     }
    },
    "cell_type": "code",
@@ -832,8 +825,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:07:22.381678Z",
-     "start_time": "2024-05-09T21:07:22.377219Z"
+     "end_time": "2024-05-09T21:21:43.582924Z",
+     "start_time": "2024-05-09T21:21:43.577966Z"
     }
    },
    "cell_type": "code",
@@ -856,8 +849,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:07:22.402597Z",
-     "start_time": "2024-05-09T21:07:22.396924Z"
+     "end_time": "2024-05-09T21:21:43.594870Z",
+     "start_time": "2024-05-09T21:21:43.589729Z"
     }
    },
    "cell_type": "code",
@@ -931,8 +924,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:07:22.433645Z",
-     "start_time": "2024-05-09T21:07:22.429905Z"
+     "end_time": "2024-05-09T21:21:43.617404Z",
+     "start_time": "2024-05-09T21:21:43.613080Z"
     }
    },
    "cell_type": "code",
@@ -956,8 +949,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:07:22.461866Z",
-     "start_time": "2024-05-09T21:07:22.457946Z"
+     "end_time": "2024-05-09T21:21:43.654621Z",
+     "start_time": "2024-05-09T21:21:43.651211Z"
     }
    },
    "cell_type": "code",
@@ -993,8 +986,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:07:22.521586Z",
-     "start_time": "2024-05-09T21:07:22.518084Z"
+     "end_time": "2024-05-09T21:21:43.676986Z",
+     "start_time": "2024-05-09T21:21:43.672982Z"
     }
    },
    "cell_type": "code",
@@ -1028,8 +1021,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:07:22.557018Z",
-     "start_time": "2024-05-09T21:07:22.551636Z"
+     "end_time": "2024-05-09T21:21:43.711624Z",
+     "start_time": "2024-05-09T21:21:43.708047Z"
     }
    },
    "cell_type": "code",
@@ -1048,8 +1041,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:07:22.603513Z",
-     "start_time": "2024-05-09T21:07:22.599817Z"
+     "end_time": "2024-05-09T21:21:43.734005Z",
+     "start_time": "2024-05-09T21:21:43.728902Z"
     }
    },
    "cell_type": "code",
@@ -1083,8 +1076,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:07:22.624159Z",
-     "start_time": "2024-05-09T21:07:22.619460Z"
+     "end_time": "2024-05-09T21:21:43.770921Z",
+     "start_time": "2024-05-09T21:21:43.766074Z"
     }
    },
    "cell_type": "code",
@@ -1123,8 +1116,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:07:22.633862Z",
-     "start_time": "2024-05-09T21:07:22.629022Z"
+     "end_time": "2024-05-09T21:21:43.788623Z",
+     "start_time": "2024-05-09T21:21:43.783412Z"
     }
    },
    "cell_type": "code",
@@ -1167,8 +1160,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:07:22.686080Z",
-     "start_time": "2024-05-09T21:07:22.681950Z"
+     "end_time": "2024-05-09T21:21:43.800503Z",
+     "start_time": "2024-05-09T21:21:43.796731Z"
     }
    },
    "cell_type": "code",
@@ -1190,8 +1183,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:07:22.704662Z",
-     "start_time": "2024-05-09T21:07:22.700731Z"
+     "end_time": "2024-05-09T21:21:43.845087Z",
+     "start_time": "2024-05-09T21:21:43.840566Z"
     }
    },
    "cell_type": "code",
@@ -1301,8 +1294,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:07:22.765031Z",
-     "start_time": "2024-05-09T21:07:22.762734Z"
+     "end_time": "2024-05-09T21:21:43.860940Z",
+     "start_time": "2024-05-09T21:21:43.858397Z"
     }
    },
    "cell_type": "code",
