--- a/object_with_getstate.ipynb
+++ b/object_with_getstate.ipynb
@@ -1237,7 +1237,7 @@
     "override it, by making explicit invocations of `object` and `type` behave\n",
     "differently, but that's really not satisfactory...\n",
     "\n",
-    "In any case, trying that was a bad idea for the start! Although having\n",
+    "In any case, trying that was a bad idea from the start! Although having\n",
     "`__getstate__` return `None` for objects without a state seems like a bad idea\n",
     "as well, so the goal was a noble one. Note, however, that two times minus\n",
     "usually doesn't turn to plus in software development."
