--- a/object_with_getstate.ipynb
+++ b/object_with_getstate.ipynb
@@ -1286,7 +1286,8 @@
     "```\n",
     "\n",
     "4. Set up tests that previously pickled objects can still be unpickled. It's fairly easy\n",
-    "to do, just save some classes as test resources, load them with pickle in tests and\n",
+    "to do, just save instances of some classes as test resources, load them \n",
+    "with pickle in tests and\n",
     "tests basic properties like access to attributes and `isinstance` checks."
    ],
    "id": "874c25c733905937"
