--- a/object_with_getstate.ipynb
+++ b/object_with_getstate.ipynb
@@ -436,7 +436,7 @@
    "cell_type": "code",
    "source": [
     "print(f\"{ClNoState().__dict__=}\")\n",
-    "print(f\"{object().__getstate__()}\")\n",
+    "print(f\"{object().__getstate__()=}\")\n",
     "\n",
     "try:\n",
     "    object().__dict__\n",
