--- a/object_with_getstate.ipynb
+++ b/object_with_getstate.ipynb
@@ -61,8 +61,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:21:42.964326Z",
-     "start_time": "2024-05-09T21:21:42.946334Z"
+     "end_time": "2024-05-09T21:39:35.925205Z",
+     "start_time": "2024-05-09T21:39:35.917172Z"
     }
    },
    "cell_type": "code",
@@ -103,8 +103,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:21:43.001634Z",
-     "start_time": "2024-05-09T21:21:42.997753Z"
+     "end_time": "2024-05-09T21:39:36.045090Z",
+     "start_time": "2024-05-09T21:39:36.041877Z"
     }
    },
    "cell_type": "code",
@@ -119,8 +119,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:21:43.032019Z",
-     "start_time": "2024-05-09T21:21:43.028465Z"
+     "end_time": "2024-05-09T21:39:36.053536Z",
+     "start_time": "2024-05-09T21:39:36.049499Z"
     }
    },
    "cell_type": "code",
@@ -152,8 +152,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:21:43.046647Z",
-     "start_time": "2024-05-09T21:21:43.041949Z"
+     "end_time": "2024-05-09T21:39:36.058298Z",
+     "start_time": "2024-05-09T21:39:36.054922Z"
     }
    },
    "cell_type": "code",
@@ -176,8 +176,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:21:43.094409Z",
-     "start_time": "2024-05-09T21:21:43.088587Z"
+     "end_time": "2024-05-09T21:39:36.070596Z",
+     "start_time": "2024-05-09T21:39:36.064049Z"
     }
    },
    "cell_type": "code",
@@ -245,8 +245,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:21:43.105601Z",
-     "start_time": "2024-05-09T21:21:43.101411Z"
+     "end_time": "2024-05-09T21:39:36.101912Z",
+     "start_time": "2024-05-09T21:39:36.096487Z"
     }
    },
    "cell_type": "code",
@@ -291,8 +291,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:21:43.118440Z",
-     "start_time": "2024-05-09T21:21:43.113810Z"
+     "end_time": "2024-05-09T21:39:36.110507Z",
+     "start_time": "2024-05-09T21:39:36.107694Z"
     }
    },
    "cell_type": "code",
@@ -325,8 +325,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:21:43.160760Z",
-     "start_time": "2024-05-09T21:21:43.157511Z"
+     "end_time": "2024-05-09T21:39:36.126215Z",
+     "start_time": "2024-05-09T21:39:36.123876Z"
     }
    },
    "cell_type": "code",
@@ -381,8 +381,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:21:43.185139Z",
-     "start_time": "2024-05-09T21:21:43.179843Z"
+     "end_time": "2024-05-09T21:39:36.187858Z",
+     "start_time": "2024-05-09T21:39:36.183675Z"
     }
    },
    "cell_type": "code",
@@ -429,8 +429,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:21:43.227478Z",
-     "start_time": "2024-05-09T21:21:43.224075Z"
+     "end_time": "2024-05-09T21:39:36.203155Z",
+     "start_time": "2024-05-09T21:39:36.199744Z"
     }
    },
    "cell_type": "code",
@@ -450,7 +450,7 @@
      "output_type": "stream",
      "text": [
       "ClNoState().__dict__={}\n",
-      "None\n",
+      "object().__getstate__()=None\n",
       "AttributeError: 'object' object has no attribute '__dict__'\n"
      ]
     }
@@ -471,8 +471,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:21:43.253822Z",
-     "start_time": "2024-05-09T21:21:43.249624Z"
+     "end_time": "2024-05-09T21:39:36.237129Z",
+     "start_time": "2024-05-09T21:39:36.232797Z"
     }
    },
    "cell_type": "code",
@@ -543,8 +543,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:21:43.309906Z",
-     "start_time": "2024-05-09T21:21:43.304152Z"
+     "end_time": "2024-05-09T21:39:36.287656Z",
+     "start_time": "2024-05-09T21:39:36.281523Z"
     }
    },
    "cell_type": "code",
@@ -586,8 +586,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:21:43.333086Z",
-     "start_time": "2024-05-09T21:21:43.328913Z"
+     "end_time": "2024-05-09T21:39:36.298370Z",
+     "start_time": "2024-05-09T21:39:36.293914Z"
     }
    },
    "cell_type": "code",
@@ -668,8 +668,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:21:43.380361Z",
-     "start_time": "2024-05-09T21:21:43.376612Z"
+     "end_time": "2024-05-09T21:39:36.310987Z",
+     "start_time": "2024-05-09T21:39:36.307990Z"
     }
    },
    "cell_type": "code",
@@ -694,8 +694,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:21:43.403074Z",
-     "start_time": "2024-05-09T21:21:43.398927Z"
+     "end_time": "2024-05-09T21:39:36.354477Z",
+     "start_time": "2024-05-09T21:39:36.350851Z"
     }
    },
    "cell_type": "code",
@@ -720,8 +720,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:21:43.454717Z",
-     "start_time": "2024-05-09T21:21:43.451148Z"
+     "end_time": "2024-05-09T21:39:36.374263Z",
+     "start_time": "2024-05-09T21:39:36.370673Z"
     }
    },
    "cell_type": "code",
@@ -736,8 +736,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:21:43.478770Z",
-     "start_time": "2024-05-09T21:21:43.473733Z"
+     "end_time": "2024-05-09T21:39:36.405984Z",
+     "start_time": "2024-05-09T21:39:36.399931Z"
     }
    },
    "cell_type": "code",
@@ -769,8 +769,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:21:43.520032Z",
-     "start_time": "2024-05-09T21:21:43.516446Z"
+     "end_time": "2024-05-09T21:39:36.420124Z",
+     "start_time": "2024-05-09T21:39:36.415988Z"
     }
    },
    "cell_type": "code",
@@ -791,8 +791,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:21:43.547813Z",
-     "start_time": "2024-05-09T21:21:43.544357Z"
+     "end_time": "2024-05-09T21:39:36.430946Z",
+     "start_time": "2024-05-09T21:39:36.427186Z"
     }
    },
    "cell_type": "code",
@@ -825,8 +825,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:21:43.582924Z",
-     "start_time": "2024-05-09T21:21:43.577966Z"
+     "end_time": "2024-05-09T21:39:36.481062Z",
+     "start_time": "2024-05-09T21:39:36.476362Z"
     }
    },
    "cell_type": "code",
@@ -849,8 +849,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:21:43.594870Z",
-     "start_time": "2024-05-09T21:21:43.589729Z"
+     "end_time": "2024-05-09T21:39:36.492050Z",
+     "start_time": "2024-05-09T21:39:36.488284Z"
     }
    },
    "cell_type": "code",
@@ -924,8 +924,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:21:43.617404Z",
-     "start_time": "2024-05-09T21:21:43.613080Z"
+     "end_time": "2024-05-09T21:39:36.502463Z",
+     "start_time": "2024-05-09T21:39:36.497776Z"
     }
    },
    "cell_type": "code",
@@ -949,8 +949,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:21:43.654621Z",
-     "start_time": "2024-05-09T21:21:43.651211Z"
+     "end_time": "2024-05-09T21:39:36.551253Z",
+     "start_time": "2024-05-09T21:39:36.547149Z"
     }
    },
    "cell_type": "code",
@@ -986,8 +986,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:21:43.676986Z",
-     "start_time": "2024-05-09T21:21:43.672982Z"
+     "end_time": "2024-05-09T21:39:36.569255Z",
+     "start_time": "2024-05-09T21:39:36.565079Z"
     }
    },
    "cell_type": "code",
@@ -1021,8 +1021,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:21:43.711624Z",
-     "start_time": "2024-05-09T21:21:43.708047Z"
+     "end_time": "2024-05-09T21:39:36.577794Z",
+     "start_time": "2024-05-09T21:39:36.575183Z"
     }
    },
    "cell_type": "code",
@@ -1041,8 +1041,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:21:43.734005Z",
-     "start_time": "2024-05-09T21:21:43.728902Z"
+     "end_time": "2024-05-09T21:39:36.645933Z",
+     "start_time": "2024-05-09T21:39:36.641717Z"
     }
    },
    "cell_type": "code",
@@ -1076,8 +1076,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:21:43.770921Z",
-     "start_time": "2024-05-09T21:21:43.766074Z"
+     "end_time": "2024-05-09T21:39:36.663466Z",
+     "start_time": "2024-05-09T21:39:36.660715Z"
     }
    },
    "cell_type": "code",
@@ -1116,8 +1116,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:21:43.788623Z",
-     "start_time": "2024-05-09T21:21:43.783412Z"
+     "end_time": "2024-05-09T21:39:36.674786Z",
+     "start_time": "2024-05-09T21:39:36.669815Z"
     }
    },
    "cell_type": "code",
@@ -1160,8 +1160,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:21:43.800503Z",
-     "start_time": "2024-05-09T21:21:43.796731Z"
+     "end_time": "2024-05-09T21:39:36.731761Z",
+     "start_time": "2024-05-09T21:39:36.727819Z"
     }
    },
    "cell_type": "code",
@@ -1183,8 +1183,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:21:43.845087Z",
-     "start_time": "2024-05-09T21:21:43.840566Z"
+     "end_time": "2024-05-09T21:39:36.747322Z",
+     "start_time": "2024-05-09T21:39:36.741600Z"
     }
    },
    "cell_type": "code",
@@ -1295,8 +1295,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:21:43.860940Z",
-     "start_time": "2024-05-09T21:21:43.858397Z"
+     "end_time": "2024-05-09T21:39:36.767227Z",
+     "start_time": "2024-05-09T21:39:36.764092Z"
     }
    },
    "cell_type": "code",
