--- a/object_with_getstate.ipynb
+++ b/object_with_getstate.ipynb
@@ -874,7 +874,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "This makes clear: we didn't actually overwrite `object`,.\n",
+    "This makes clear: we didn't actually overwrite `object`.\n",
     "The real `object` class is added somewhere, I guess in the python compiler, and we can\n",
     "neither get rid of it nor overwrite it."
    ],
