Renamed GetstateMixin to Serializable

--- a/object_with_getstate.ipynb
+++ b/object_with_getstate.ipynb
@@ -661,7 +661,8 @@
    "source": [
     "The first thing to do is to define a class that will always have `__getstate__`.\n",
     "And the proper way of using this class (not the unpattern way) is to inherit\n",
-    "from when needed - so it's going to be a mixin."
+    "from when needed. We call it `Serializable`, just like the marker interface in\n",
+    "java."
    ],
    "id": "32d9b4958e7e98b5"
   },
@@ -674,7 +675,7 @@
    },
    "cell_type": "code",
    "source": [
-    "class GetstateMixin:\n",
+    "class Serializable:\n",
     "    def __getstate__(self):\n",
     "        return self.__dict__"
    ],
@@ -687,7 +688,7 @@
    "cell_type": "markdown",
    "source": [
     "Now let's try to overwrite the default behavior of `object`\n",
-    "such that all classes inherit from `GetstateMixin` by default."
+    "such that all classes inherit from `Serializable` by default."
    ],
    "id": "4d6a65c91120688d"
   },
@@ -702,7 +703,7 @@
    "source": [
     "import builtins\n",
     "\n",
-    "builtins.object = GetstateMixin"
+    "builtins.object = Serializable"
    ],
    "id": "974df4abb0344d1a",
    "outputs": [],
@@ -915,7 +916,7 @@
     " |  \n",
     "```\n",
     "\n",
-    "So, if we want to sneak in our `GetstateMixin`,\n",
+    "So, if we want to sneak in our `Serializable`,\n",
     "we need to extend the `bases` to include it.\n",
     " Here the extended type implementation:"
    ],
@@ -933,7 +934,7 @@
     "class type_with_getstate(type):\n",
     "    def __new__(cls, *args):\n",
     "        args = list(args)\n",
-    "        args[1] += (GetstateMixin,)\n",
+    "        args[1] += (Serializable,)\n",
     "        return super().__new__(cls, *args)"
    ],
    "id": "2633bdd942244558",
@@ -1014,7 +1015,7 @@
    "cell_type": "markdown",
    "source": [
     "What happened? Why did it stop doing its job - we only overwrote `__new__`, not `__call__`.\n",
-    "Is `__new__` being called when whe use it to determine an object's type? This this should work:\n"
+    "Is `__new__` being called when whe use it to determine an object's type? Then this should work:\n"
    ],
    "id": "98302556ff3d07da"
   },
@@ -1031,7 +1032,7 @@
     "    def __new__(cls, *args):\n",
     "        if len(args) > 1:\n",
     "            args = list(args)\n",
-    "            args[1] += (GetstateMixin,)\n",
+    "            args[1] += (Serializable,)\n",
     "        return super().__new__(cls, *args)\n"
    ],
    "id": "6dbdb9da602c8610",
@@ -1133,7 +1134,7 @@
     "            return _original_type(*args)\n",
     "        # used as metaclass\n",
     "        args = list(args)\n",
-    "        args[1] += (GetstateMixin,)\n",
+    "        args[1] += (Serializable,)\n",
     "        return super().__new__(cls, *args, **kwargs)\n",
     " \n",
     " \n",
